# embodiedmetalhack

./: .gitignore  README.md  config.yaml  disarm.py  human_builder.py  human_builder_ui.py  pyproject.toml  release_torque.py  requirements.txt  run.py  simulate.py  voice_control.py
3.11/: cache.0.db  cache.1.db  cache.10.db  cache.11.db  cache.12.db  cache.13.db  cache.14.db  cache.15.db  cache.2.db  cache.3.db  cache.4.db  cache.5.db  cache.6.db  cache.7.db  cache.8.db  cache.9.db
backend/: __init__.py  build_runner.py  camera_hub.py  config.py  highlights.py  main.py  rerun_service.py
backend/routes/: build.py  cam2.py  highlights.py  rerun.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BuildControl.tsx  HighlightsReel.tsx  HousePreview3D.tsx  LiveMonitor.tsx  ReferenceScan.tsx
frontend/src/hooks/: useBuildStatus.ts
src/house_builder/: __init__.py  builder.py  models.py  parser.py  planner.py  policy.py  robot.py  rr_blueprint.py  rr_time.py  state_machine.py  sync_checkpoint.py  verifier.py
tests/: test_backend_highlights.py  test_backend_state_callback.py  test_builder.py  test_human_builder.py  test_parser.py  test_planner.py  test_verifier.py  test_voice_control.py
